Replace String.format(s, ...) with s.formatted(...).