@@ -5,7 +5,7 @@ import java.lang.reflect.Method;
 public class InvalidLiberinHandlerMethod extends RuntimeException {
 
     public InvalidLiberinHandlerMethod(Method method) {
-        super(String.format("%s method is not a valid liberin handler", method));
+        super("%s method is not a valid liberin handler".formatted(method));
     }
 
 }
