@@ -7,7 +7,7 @@ import org.moera.lib.node.types.notifications.NotificationType;
 public class DuplicationNotificationMapping extends RuntimeException {
 
     public DuplicationNotificationMapping(NotificationType type, Method method) {
-        super(String.format("Notification mapping for type %s is already declared on method %s", type.name(), method));
+        super("Notification mapping for type %s is already declared on method %s".formatted(type.name(), method));
     }
 
 }
