@@ -5,7 +5,7 @@ import java.lang.reflect.Method;
 public class InvalidOptionHookMethod extends RuntimeException {
 
     public InvalidOptionHookMethod(Method method) {
-        super(String.format("%s method is not a valid option hook method", method));
+        super("%s method is not a valid option hook method".formatted(method));
     }
 
 }
